# django-money-example

./: README.rst  docker-compose.yml  pyproject.toml  pytest.ini
django_money_example/: manage.py
django_money_example/core/: models.py  serializers.py
django_money_example/core/migrations/: 0001_initial.py  0002_auto_20191122_1401.py  0003_auto_20191127_0836.py
django_money_example/django_money_example/: settings.py  urls.py
django_money_example/project/: settings.py  wsgi.py
tests/: test_django_money_example.py
