[tool.poetry]
name = "django-money-example"
version = "0.1.0"
description = ""
authors = ["Johnny Rocketfingers <developer94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-money = "^1.0"
psycopg2 = "^2.8"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-django = "^3.7"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
